[package]
name = "zsh-history-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
eyre = "0.6.5"
nom = "7.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
rstest = "0.12.0"
rstest_reuse = "0.1.3"
