[package]
name = "zsh-history-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
eyre = "0.6.8"
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
